worked on tests.js

--- a/Develop/src/helperindex.html
+++ b/Develop/src/helperindex.html
@@ -1,4 +1,4 @@
-<!doctype html>
+ <!doctype html>
 <html lang="en">
 
 <head>
@@ -9,7 +9,33 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
     integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-  <link rel="stylesheet" href="./style.css">
+  <style>
+    header {
+      font-size: 18px;
+      width: 100%;
+      background-color: #22221d;
+      padding: 10px;
+      color: whitesmoke;
+
+    }
+
+    #main-box {
+      margin: 20px;
+    }
+
+    .card {
+      box-shadow: 5px 5px grey;
+    }
+
+    .card-header {
+      background-color: gainsboro;
+    }
+
+    .card ul li {
+      background-color: #22221d;
+      color: whitesmoke;
+    }
+  </style>
 
   <title>Team Profle Generator</title>
 </head>
@@ -57,14 +83,9 @@
         <li class="list-group-item">A third item</li>
       </ul>
     </div>
-    <!-- <div class="card-body">
-    <a href="#" class="card-link">Card link</a>
-    <a href="#" class="card-link">Another link</a>
-  </div> -->
 
 
   </div>
-  <!-- </div> -->
 
 
 
